@@ -1,9 +1,0 @@
-<div id="edit_form">
-<form name="vacation" method="post">
-<table>
-   <tr>
-      <td class="hlp_center"><input class="button" type="submit" name="fBack" value="<?php print $PALANG['pUsersVacation_button_back']; ?>" /></td>
-   </tr>
-</table>
-</form>
-</div>
